# rental-backend/swagger-output.json
@@ -228,6 +228,35 @@
         }
       }
     },
+    "/api/v1/properties/host/{hostId}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "hostId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/v1/properties/{id}": {
       "get": {
         "description": "",
